RESOLVED FIXED130747
PluginProcess rarely AppSleeps
https://bugs.webkit.org/show_bug.cgi?id=130747
Summary PluginProcess rarely AppSleeps
Stephanie Lewis
Reported 2014-03-25 15:24:35 PDT
Created attachment 227808 [details] patch Synchronous messages between the WebProcess and the PluginProcess keep the PluginProcess awake even in the background. Since we believe that AppSleep assertions are only necessary during user activity, drawing, or audio playing and those are all covered elsewhere don't take an assertion while conveying sync messages.
Attachments
patch (21.38 KB, patch)
2014-03-25 15:24 PDT, Stephanie Lewis
slewis: review-
real patch (2.95 KB, patch)
2014-03-27 14:18 PDT, Stephanie Lewis
andersca: review+
Stephanie Lewis
Comment 1 2014-03-27 14:04:12 PDT
Comment on attachment 227808 [details] patch oops wrong patch
Stephanie Lewis
Comment 2 2014-03-27 14:18:40 PDT
Created attachment 227979 [details] real patch
Stephanie Lewis
Comment 3 2014-03-28 18:20:38 PDT
Note You need to log in before you can comment on or make changes to this bug.